Got rid of deprecated method call.